fix video not stretching to full height On small screens such as a rotated phone.

--- a/components/Landing/Landing.module.css
+++ b/components/Landing/Landing.module.css
@@ -1,4 +1,5 @@
 .landing {
+    position: relative;
     display: flex;
     flex-direction: column;
     justify-content: space-evenly;
@@ -7,6 +8,13 @@
     padding: 0px 16px;
     width: 100%;
     min-height: 100vh;
+}
+
+.video {
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
 }
 
 .main{
@@ -33,13 +41,6 @@
     border: 3px solid #7E7E7E;
     box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
     border-radius: 10px;
-}
-
-.video {
-    position: absolute;
-    width: 100%;
-    height: 100%;
-    object-fit: cover;
 }
 
 .subtitle {
